--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,15 +5,16 @@ spring:
       "local": "dev"
       "prod": "prod"
 
-resilience4j:
-  bulkhead:
-    instances:
-      default:
-        maxWaitDuration: 1000ms
-        maxConcurrentCall: 2
-  thread-pool-bulkhead:
-    instances:
-      default:
-        maxThreadPoolSize: 1
-        coreThreadPoolSize: 1
-        queueCapacity: 1
+#default resilience4j config
+resilience4j.timelimiter:
+  instances:
+    default:
+      timeoutDuration: 10000ms
+      cancelRunningFuture: true
+resilience4j.circuitbreaker:
+  instances:
+    default:
+      registerHealthIndicator: true
+      slidingWindowSize: 20
+      permittedNumberOfCallsInHalfOpenState: 10
+      slidingWindowType: TIME_BASED
