GMS API facade | Rajat,Abhishek,Hari | Implement logger with fixed pattern

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -49,3 +49,8 @@ resilience4j.circuitbreaker:
       slidingWindowSize: 10
       permittedNumberOfCallsInHalfOpenState: 5
       slidingWindowType: TIME_BASED
+
+logging:
+  level:
+    root: INFO
+    com.tw.gms: DEBUG
