--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,4 +19,5 @@ resilience4j.circuitbreaker:
       permittedNumberOfCallsInHalfOpenState: 10
       slidingWindowType: TIME_BASED
 
-logging.pattern.console: "%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %highlight(%level) %logger.%M|%X{uuid}|%X{uri}|%X{method}|%msg%n"
+#logging.pattern.console: "%d{dd-MM-yyyy HH:mm:ss.SSS}|[%thread] %highlight(%level) %logger.%M|%X{uuid}|%X{uri}|%X{method}|%msg%n"
+logging.pattern.console: "%d{dd-MM-yyyy HH:mm:ss.SSS}|%level|%logger.%M|%X{uuid}|%X{uri}|%X{method}|%msg%n"
