--- a/EndToEndTest/gmsEndtoEndTest/pom.xml
+++ b/EndToEndTest/gmsEndtoEndTest/pom.xml
@@ -22,5 +22,11 @@
             <version>5.2.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.10</version>
+        </dependency>
     </dependencies>
 </project>
