GMS | Abhishek, Hari, Rajat | extract resilient configurations in separate yaml file

--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
-GMS_JAVA_OPTS=-Dspring.profiles.active=resilient -Djava.security.egd=file:/dev/./urandom -Dspring-boot.run.arguments="--logging.level.com.tw.gms=DEBUG"
-
 GMS_APPLICATION_PORT=443
 GMS_KEYSTORE_PATH=classpath:springboot.p12
 GMS_KEYSTORE_PASSWORD=password
 GMS_KEYSTORE_TYPE=pkcs12
 GMS_KEY_ALIAS=springboot
 GMS_KEY_PASSWORD=password
+SPRING_PROFILES_ACTIVE=default,resilient
 
 GMS_APPLICATION_LOGGING_LEVEL=INFO
 
