GMS | Rajat,Abhishek,Hari | added README.md file

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 GMS_APPLICATION_PORT=443
+#GMS_KEYSTORE_PATH= absoulte path to springboot.p12
 GMS_KEYSTORE_PATH=classpath:springboot.p12
 GMS_KEYSTORE_PASSWORD=password
 GMS_KEYSTORE_TYPE=pkcs12
