[Abhishek|Anuja] added client credential config

--- a/.air.toml
+++ b/.air.toml
@@ -4,7 +4,7 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main"
+  bin = "tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/gms"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
@@ -14,7 +14,7 @@ tmp_dir = "tmp"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", "xml"]
+  include_ext = ["go", "tpl", "tmpl", "html", "xml", "toml"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
@@ -36,7 +36,7 @@ tmp_dir = "tmp"
 
 [log]
   main_only = false
-  time = false
+  time = true
 
 [misc]
   clean_on_exit = true
