--- a/resources/app.yaml
+++ b/resources/app.yaml
@@ -10,6 +10,9 @@ iam:
   apis:
     currentUser: /scim/Me
     fetchToken: /token
+    findAccountByCertSubject: /iam/account/find/bycertsubject?certificateSubject={certificateSubject}
+    getUserCount: /scim/Users?attributes=id&count=1
+    fetchUsersInBatch: /scim/Users?attributes=displayName,groups,urn:indigo-dc:scim:schemas:IndigoUser.certificates&startIndex={startIndex}&count={count}
 
 
 password-grant-flow:
