--- a/deployment/kubernetes.yml
+++ b/deployment/kubernetes.yml
@@ -12,8 +12,8 @@ data:
 
   GMS_APPLICATION_LOGGING_LEVEL: INFO
   PASSWORD_GRANT_FLOW_ACTIVE: "false"
-  IAM_SCIM_CLIENT_ID: client_id 
-  IAM_SCIM_CLIENT_SECRET: client_secret 
+  IAM_SCIM_CLIENT_ID: client_secret
+  IAM_SCIM_CLIENT_SECRET: client_secret
   JVM_OPTS: -Dca.nrc.cadc.auth.IdentityManager=org.opencadc.auth.StandardIdentityManager
   PATH: /opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   JAVA_HOME: /opt/java/openjdk
@@ -22,6 +22,15 @@ data:
   LC_ALL: en_US.UTF-8
   JAVA_VERSION: jdk-19.0.2+7
 
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: cadc-registry
+data:
+  cadc-registry.properties: |
+    ivo://ivoa.net/sso#OpenID = https://ska-iam.stfc.ac.uk
 
 ---
 
@@ -55,8 +64,11 @@ spec:
     spec:
       containers:
       - name: gms
-        image: abhishek1009/gms-go
+        image: abhishek1009/gms-java
         imagePullPolicy: Never
+        volumeMounts:
+            - name: cadc-registry
+              mountPath: /root/config
         ports:
         - containerPort: 8080
         envFrom:
@@ -69,3 +81,7 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "1"
+      volumes:
+          - name: cadc-registry
+            configMap:
+              name: cadc-registry
